examples/test/testpolicy11620.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11620
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key28: value27
      key12: value34
      key49: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value26
          key17: value12
          key3: value48
